# chips-workflow

./: .gitignore  .gitmodules  CMakeLists.txt  LICENSE  README.md  build.sh  compile_commands.json
app/: CMakeLists.txt  app_face.cpp  app_flowengine.cpp  license_plate_rec.cpp  object_counter.cpp  test_ffmstream.cpp  test_onnxruntime_infer.cpp
cmake/: utils.cmake  (+2 more)
server/face/: AppComponent.hpp  CMakeLists.txt  DatabaseComponent.hpp  ErrorHandler.hpp  README.md  SwaggerComponent.hpp  app_face.cc  conf.json  curlUtils.hpp  networkUtils.hpp  readme_facelib.md  statusCode.hpp  test_face_keypoints.cc  test_face_quality.cc  test_face_rec.cc  test_facelib.cc  test_faiss.cc  test_liveness.cc  test_stream.cc
server/face/controller/: FaceController.hpp  StaticController.hpp  VideoController.hpp
server/face/core/: algoDispatcher.hpp  algoManager.cpp  algoManager.hpp  faceDBOperator.cpp  faceDBOperator.hpp  faceInferUtils.hpp  faceLibManager.cpp  faceLibManager.hpp  faceLiveness.cpp  faceLiveness.hpp  faceQuality.cpp  faceQuality.hpp  faceRecognition.cpp  faceRecognition.hpp  facelib.hpp  resultProcessor.cpp  resultProcessor.hpp  streamManager.cpp  streamManager.hpp
server/face/db/: UserDb.hpp
server/face/dto/: FaceDto.hpp  FacelibDto.hpp  ImageDto.hpp  StatusDto.hpp  StreamDto.hpp  UserDto.hpp
src/: CMakeLists.txt
src/common/: CMakeLists.txt  algo_header.hpp  common.hpp  config.hpp  config_temp.hpp  configs.hpp  infer_header.hpp  module_header.hpp  new_config.hpp  platform_info.hpp
src/core/: BS_thread_pool.hpp  CMakeLists.txt  algoInfer.hpp  algorithmBus.h  backend.cpp  backend.h  basicMessage.pb.cc  basicMessage.pb.h  basicMessage.proto  boostMessage.cpp  boostMessage.h  factory.hpp  frameBuf.hpp  frameMessage.pb.cc  frameMessage.proto  framePool.hpp  joining_thread.h  messageBus.h  module.hpp  moduleFactory.hpp  myBase64.hpp  routeFramePool.cpp  routeFramePool.h  thread_pool.h
src/infer/: CMakeLists.txt  algorithmBus.hpp  algorithmManager.cpp  algorithmManager.hpp  assdDet.cpp  assdDet.hpp  charsRec.cpp  charsRec.hpp  classifier.cpp  classifier.hpp  crnnRec.cpp  crnnRec.hpp  csk.cpp  csk_ffttools.hpp  csk_fhog.hpp  detection.cpp  detection.hpp  faceKeyPoints.cpp  faceKeyPoints.hpp  faceNet.cpp  faceNet.hpp  features.cpp  features.hpp  frame_difference.cpp  frame_difference.h  frame_difference.hpp  infer_common.hpp  infer_utils.cpp  infer_utils.hpp  inference.h  inference.hpp  keypoints.cpp  keypoints.hpp  lprDet.cpp  lprDet.hpp  pose.cpp  pose.hpp  postprocess.cpp  postprocess.hpp  preprocess.cpp  (+14 more)
src/license/: CMakeLists.txt  licenseGenerator.cpp  licenseGenerator.hpp  licenseVerifier.cpp  licenseVerifier.hpp  msgCollector.cpp  msgCollector.hpp  packageDecrypter.cpp  packageDecrypter.hpp
src/logger/: CMakeLists.txt  logger.cpp  logger.hpp
src/module/: BasicTracker.h  CMakeLists.txt  alarmOutputModule.cpp  alarmOutputModule.h  alarmOutputModule.hpp  alarmUtils.h  alarmUtils.hpp  backend.h  backend.hpp  boostMessage.cpp  boostMessage.h  boostMessage.hpp  callingModule.cpp  callingModule.h  classifierModule.cpp  classifierModule.h  configParser.cpp  configParser.hpp  controlModule.cpp  controlModule.hpp  csk.hpp  cskTrackModule.cpp  cskTrackModule.h  csk_ffttools.cpp  csk_fhog.cpp  csk_recttools.hpp  detClsModule.cpp  detClsModule.h  detClsModule.hpp  detectModule.cpp  detectModule.h  earthwireModule.cpp  earthwireModule.h  extinguisherModule.cpp  extinguisherModule.h  ffstream.cpp  ffstream.hpp  fireModule.cpp  fireModule.h  frameDifferenceModule.cpp  (+61 more)
src/utils/: CMakeLists.txt  circular_buffer.hpp  configParser.cpp  configParser.hpp  convertMat.cpp  convertMat.hpp  exception.hpp  factory.hpp  joining_thread.hpp  jsonParser.cpp  jsonParser.hpp  myBase64.hpp  platform_info.hpp  thread_pool.hpp  time_utils.hpp
src/video/: CMakeLists.txt  ffstream.cpp  ffstream.hpp  frameBuf.hpp  streamPoolBus.hpp  uri.cpp  uri.hpp  vdecoder.hpp  videoDecoderPool.hpp  videoManager.cpp  videoManager.hpp  videoRecord.cpp  videoRecord.hpp  video_common.hpp  video_utils.hpp  vrecorder.hpp
tests/: CMakeLists.txt  app.cpp  app_conf_generator.cpp  app_decrypter.cpp  app_flowengine.cpp  app_license_generator.cpp  license_generator.cpp  temp.cpp  test_algo_manager.cpp  test_assd.cpp  test_bg_module.cpp  test_bg_sub.cpp  test_center_params.cpp  test_config_parser.cpp  test_constructor.cpp  test_decode_simple.cpp  test_det_module.cpp  test_detection.cpp  test_eigen.cpp  test_face.cpp  test_gen_identity.cpp  test_gflags.cpp  test_infer.cpp  test_infer_det.cpp  test_infer_utils.cpp  test_jetson_codec.cpp  test_license_generator.cpp  test_logger.cpp  test_opencv_module.cpp  test_pipe.cpp  test_pipeline.cpp  test_rapidjson.cpp  test_transpose.cpp  test_video_decoder.cpp  test_vio_module.cpp  test_vision_infer.cpp  test_yolo_infer.cpp  trtexec.cpp
tests/app/: app_flowengine.cpp
tests/authorization/: app_msg_collector.cpp
tests/generic/: CMakeLists.txt  test_onnxruntime_infer.cpp
tests/infer/: CMakeLists.txt  face_recognition.cpp  license_plate_rec.cpp  object_counter.cpp  test_algo_manager.cpp  test_color_convert.cpp  test_engine_face.cpp  test_face.cpp  test_facelib.cpp  test_faiss_face.cpp  test_frame_diff.cpp  test_infer_utils.cpp  test_lpr.cpp  test_vision_infer.cpp
tests/jetson/: CMakeLists.txt  trtexec.cpp
tests/module/: CMakeLists.txt  test_fd_module.cpp  test_stream_module.cpp
tests/other/: test_center_params.cpp  test_config_parser.cpp  test_logger.cpp
tests/rockchip/: CMakeLists.txt  mpp_decode.cpp  test_rtsp_demo.cpp  test_yolo_demo.cpp
tests/video/: CMakeLists.txt  test_bandwidth_for_rtsp.cpp  test_decoder.cpp  test_decoder_pool.cpp  test_ffmstream.cpp  test_get_codec.cpp  test_priority_decoder_pool.cpp  test_socket_rtsp.cpp  test_video_decoder.cpp  test_xdecoder.cpp
tests/x3/: CMakeLists.txt  test_bpu_infer.cpp  test_decoder_pool.cpp  test_reuse_decoder.cpp  test_rtsp_infer.cpp  test_video_manager.cpp  test_vio2encoder.cpp  test_vio_codec.cpp  test_vio_module.cpp  test_vps.cpp  test_x3_infer.cpp  test_xcamera.cpp  test_xdecoder.cpp  test_xencoder.cpp  test_xvideo.cpp
(+237 files in other folders)
