CMAKE_MINIMUM_REQUIRED(VERSION 3.1)

LINK_DIRECTORIES(
    ${COMMON_LIBRARY_DIR}
)

# submodule
ADD_SUBDIRECTORY(common)
ADD_SUBDIRECTORY(logger)
ADD_SUBDIRECTORY(utils)
ADD_SUBDIRECTORY(core)
ADD_SUBDIRECTORY(infer)
ADD_SUBDIRECTORY(module)

# transfer all headers to the include directory 
FILE(MAKE_DIRECTORY ${PROJECT_INCLUDE_DIR})

MESSAGE(STATUS "This is BINARY dir " ${PROJECT_BINARY_DIR})
MESSAGE(STATUS "This is SOURCE dir " ${PROJECT_SOURCE_DIR})
SET(EXECUTABLE_OUTPUT_PATH ${PROJECT_BINARY_DIR}/bin)


