CMAKE_MINIMUM_REQUIRED(VERSION 3.10)
PROJECT(Tests)

IF(TARGET_HARDWARE STREQUAL jetson)
    ADD_SUBDIRECTORY(jetson)
ELSEIF(TARGET_HARDWARE STREQUAL x3)
    ADD_SUBDIRECTORY(x3)
ELSEIF(TARGET_HARDWARE STREQUAL rockchip)
    ADD_SUBDIRECTORY(rockchip)
ENDIF()

ADD_SUBDIRECTORY(video)
ADD_SUBDIRECTORY(infer)
ADD_SUBDIRECTORY(module)