CMAKE_MINIMUM_REQUIRED(VERSION 3.10)
PROJECT(FaceService LANGUAGES C CXX)

FILE(GLOB_RECURSE FACE_SERVER_LIB_HEAD ${CMAKE_CURRENT_SOURCE_DIR}/*.hpp ${CMAKE_CURRENT_SOURCE_DIR}/*.h)

FILE(MAKE_DIRECTORY ${PROJECT_OUTPUT_DIR}/bin/app)
SET(CMAKE_RUNTIME_OUTPUT_DIRECTORY ${PROJECT_OUTPUT_DIR}/bin/app)

ADD_EXECUTABLE(face_server ${CMAKE_CURRENT_SOURCE_DIR}/app_face.cc)
TARGET_INCLUDE_DIRECTORIES(face_server PRIVATE
    ${PROJECT_INCLUDE_DIR}
    ${PROJECT_INCLUDE_DIR}/server/face
    ${PROJECT_INCLUDE_DIR}/infer
)
TARGET_LINK_LIBRARIES(face_server infer module_logger ${CURL_LIBRARIES})

# transfer all headers to the include directory
FILE(MAKE_DIRECTORY ${PROJECT_INCLUDE_DIR}/server/face)
FOREACH(include ${FACE_SERVER_LIB_HEAD})
  MESSAGE("-- Copying ${include}")
  CONFIGURE_FILE(${include} ${PROJECT_INCLUDE_DIR}/server/face COPYONLY)
ENDFOREACH()

INSTALL(TARGETS face_server
    ARCHIVE DESTINATION lib
    LIBRARY DESTINATION lib
    RUNTIME DESTINATION bin)
