CMAKE_MINIMUM_REQUIRED(VERSION 3.10)

SET(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -Wno-error=deprecated-declarations")
AUX_SOURCE_DIRECTORY(. CURRENT_DIR_SRCS)
ADD_LIBRARY(license ${CURRENT_DIR_SRCS})
FILE(GLOB_RECURSE CURRENT_DIR_HEAD ${CMAKE_CURRENT_SOURCE_DIR}/*.hpp ${CMAKE_CURRENT_SOURCE_DIR}/*.h)

LINK_DIRECTORIES(
    ${OPENSSL_LIBRARY_DIR}
)

TARGET_INCLUDE_DIRECTORIES(license PUBLIC
    ${PROJECT_INCLUDE_DIR}
    ${OPENSSL_INCLUDE_DIR}
)

TARGET_LINK_LIBRARIES(license module_logger ${OPENSSL_LIBS})

FILE(MAKE_DIRECTORY ${PROJECT_INCLUDE_DIR}/license)

FOREACH(include ${CURRENT_DIR_HEAD})
    MESSAGE("-- Copying ${include}")
    CONFIGURE_FILE(${include} ${PROJECT_INCLUDE_DIR}/license COPYONLY)
ENDFOREACH()

# INSTALL(DIRECTORY ${CMAKE_CURRENT_SOURCE_DIR}
# DESTINATION ${CMAKE_INSTALL_PREFIX}/include/license
# FILES_MATCHING
# PATTERN "*.h"
# PATTERN "*.hpp"
# PATTERN "CMakeLists.txt" EXCLUDE
# )

# INSTALL(TARGETS license
# ARCHIVE DESTINATION lib
# LIBRARY DESTINATION lib
# RUNTIME DESTINATION bin)
