CMAKE_MINIMUM_REQUIRED(VERSION 3.10)
PROJECT(FlowEngineModule LANGUAGES C CXX)
SET(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -Wno-error=deprecated-declarations")

SET(CMAKE_POSITION_INDEPENDENT_CODE ON)

FILE(GLOB SWMODULE_LIB_SRC ${CMAKE_CURRENT_SOURCE_DIR}/*.cpp ${CMAKE_CURRENT_SOURCE_DIR}/*.cc ${CMAKE_CURRENT_SOURCE_DIR}/*.c)
FILE(GLOB SWMODULE_LIB_HEAD ${CMAKE_CURRENT_SOURCE_DIR}/*.hpp ${CMAKE_CURRENT_SOURCE_DIR}/*.h)

ADD_LIBRARY(module ${SWMODULE_LIB_SRC})
TARGET_INCLUDE_DIRECTORIES(module PRIVATE
    ${PROJECT_INCLUDE_DIR}
    ${PROJECT_INCLUDE_DIR}/common
    ${PROJECT_INCLUDE_DIR}/jetson-utils
    ${CUDA_INCLUDE_DIRS}
    ${PROJECT_INCLUDE_DIR}/module
    ${PROJECT_INCLUDE_DIR}/infer
    ${PROJECT_INCLUDE_DIR}/video
    ${3RDPARTY_DIR}/Eigen
    ${3RDPARTY_DIR}/nlohmann
    ${CURL_INCLUDE_DIR}
    ${OpenCV_INCLUDE_DIRS}
)
TARGET_LINK_LIBRARIES(module infer video module_logger ${FAISS_LIBRARIES} ${CURL_LIBRARIES})

# transfer all headers to the include directory
FILE(MAKE_DIRECTORY ${PROJECT_INCLUDE_DIR}/module)

FOREACH(include ${SWMODULE_LIB_HEAD})
    MESSAGE("-- Copying ${include}")
    CONFIGURE_FILE(${include} ${PROJECT_INCLUDE_DIR}/module COPYONLY)
ENDFOREACH()

INSTALL(TARGETS module
    ARCHIVE DESTINATION lib
    LIBRARY DESTINATION lib
    RUNTIME DESTINATION bin)
